--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
   <title>Simple Website</title>
   <link rel="stylesheet" href="main.css">
 </head>
-<body>
+<body class="light-theme">
   <h1>Task List</h1>
   <p id="msg">Current tasks:</p>
   <ul>
@@ -15,5 +15,8 @@
     <li class="list">Add light and dark themes</li>
     <li>Enable switching the theme</li>
   </ul>
+  <div><button class="btn">Dark</button></div>
+  <script src="app.js"></script>
+  <noscript>You need to enable JavaScript to view the full site.</noscript>
 </body>
 </html>
