--- a/main.html
+++ b/main.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,10 +8,14 @@
   <title>Simple Website</title>
   <link rel="stylesheet" href="main.css">
 </head>
+
 <body class="light-theme">
   <h1>Task List</h1>
   <p id="msg">Current tasks:</p>
   <ul>
+    <img
+      src="https://static.wikia.nocookie.net/be-like-bro/images/7/7b/Picklerick.jpg/revision/latest/top-crop/width/360/height/450?cb=20171118185327"
+      height="100" width="100" />
     <li class="list">Add visual styles</li>
     <li class="list">Add light and dark themes</li>
     <li>Enable switching the theme</li>
@@ -19,4 +24,5 @@
 </body>
 <script src="app.js"></script>
 <noscript>You need to enable JavaScript to view the full site.</noscript>
+
 </html>
