--- a/main.html
+++ b/main.html
@@ -16,6 +16,9 @@
     <img
       src="https://static.wikia.nocookie.net/be-like-bro/images/7/7b/Picklerick.jpg/revision/latest/top-crop/width/360/height/450?cb=20171118185327"
       height="100" width="100" />
+    <div><input type="text" id="inp"/></div>
+    <div><button onclick="Pressed();">Click</button></div>
+    <script src="app.js"></script>
     <li class="list">Add visual styles</li>
     <li class="list">Add light and dark themes</li>
     <li>Enable switching the theme</li>
