removed old html, made better colors

--- a/main.html
+++ b/main.html
@@ -10,23 +10,19 @@
 </head>
 
 <body class="light-theme">
-  <h1>Task List</h1>
-  <p id="msg">Current tasks:</p>
-  <ul>
+  <div style="text-align: center;">
+    <h1>JavaScript Practice</h1>
+    <!-- <p id="msg">JavaScript Magic</p> -->
     <img
       src="https://static.wikia.nocookie.net/be-like-bro/images/7/7b/Picklerick.jpg/revision/latest/top-crop/width/360/height/450?cb=20171118185327"
       height="100" width="100" />
 
     <div><input type="text" id="inp" /></div>
     <div><button onclick="Pressed()">Click</button></div>
-
-    <li class="list">Add visual styles</li>
-    <li class="list">Add light and dark themes</li>
-    <li>Enable switching the theme</li>
-  </ul>
-  <div><button class="btn">Dark</button></div>
+    <div><button class="btn">Dark</button></div>
+  </div>
 </body>
+
 <script src="app.js"></script>
-<noscript>You need to enable JavaScript to view the full site.</noscript>
 
 </html>
