--- a/main.html
+++ b/main.html
@@ -21,8 +21,9 @@
     <div><button onclick="Pressed()">Click</button></div>
     <div><button class="btn">Dark</button></div>
 
-    <h1>Rick & Morty!</h1>
-    <div id="rickAndMorty"></div>
+
+    <h1 class="rickBanner">Rick & Morty!</h1>
+    <div class="rickCard" id="rickAndMorty"></div>
   </div>
 </body>
 
