--- a/main.html
+++ b/main.html
@@ -13,10 +13,8 @@
   <div style="text-align: center;">
     <h1 class="rickBanner">Rick & Morty!</h1>
     <h3>JavaScript Practice</h3>
-    <img
-      src="https://static.wikia.nocookie.net/be-like-bro/images/7/7b/Picklerick.jpg/revision/latest/top-crop/width/360/height/450?cb=20171118185327"
-      height="100" width="100" />
 
+    <img src="https://rickandmortyapi.com/api/character/avatar/265.jpeg" height="100" width="100" />
     <div><input type="text" id="inp" /></div>
     <div><button onclick="Pressed()">Click</button></div>
     <div><button class="btn">Dark</button></div>
