--- a/main.html
+++ b/main.html
@@ -14,7 +14,7 @@
     <h1 class="rickBanner">Rick & Morty!</h1>
     <h3>JavaScript Practice</h3>
 
-    <img src="https://rickandmortyapi.com/api/character/avatar/265.jpeg" height="100" width="100" />
+    <img class="mortyPickleImg" src="https://rickandmortyapi.com/api/character/avatar/265.jpeg" />
     <div><input type="text" id="inp" /></div>
     <div><button onclick="Pressed()">Click</button></div>
     <div><button class="btn">Dark</button></div>
