rick style button

--- a/main.html
+++ b/main.html
@@ -16,7 +16,8 @@
 
     <img class="mortyPickleImg" src="https://rickandmortyapi.com/api/character/avatar/265.jpeg" />
     <div><input type="text" id="inp" /></div>
-    <div><button onclick="Pressed()">Click</button></div>
+    <br>
+    <div><button class="rickStyleButton" onclick="Pressed()">Search</button></div>
     <div><button class="btn">Dark</button></div>
 
     <div class="rickCard" id="rickAndMorty"></div>
