little input style idea

--- a/main.html
+++ b/main.html
@@ -15,7 +15,7 @@
     <h3>JavaScript Practice</h3>
 
     <img class="mortyPickleImg" src="https://rickandmortyapi.com/api/character/avatar/265.jpeg" />
-    <div><input type="text" id="inp" /></div>
+    <div><input type="text" id="inp" placeholder="Search for a character!" /></div>
     <br>
     <div><button class="rickStyleButton" onclick="Pressed()">Search</button></div>
     <div><button class="btn">Dark</button></div>
