--- a/main.html
+++ b/main.html
@@ -20,7 +20,14 @@
     <div><button class="rickStyleButton" onclick="Pressed()">Search</button></div>
     <div><button class="btn">Dark</button></div>
 
-    <div class="rickCard" id="rickAndMorty"></div>
+    <div class="cardholder">
+      <div class="rickycard">
+        <img class="rickycardimg" id="cardimg" src="" alt="Rick & Morty character">
+        <div class="container" id="cardbody"></div>
+      </div>
+    </div>
+
+
   </div>
 </body>
 
