--- a/main.html
+++ b/main.html
@@ -22,7 +22,7 @@
 
     <div class="cardholder">
       <div class="rickycard">
-        <img class="rickycardimg" id="cardimg" src="" alt="Rick & Morty character">
+        <img id="cardimg" alt="Rick & Morty character">
         <div class="container" id="cardbody"></div>
       </div>
     </div>
