--- a/main.html
+++ b/main.html
@@ -19,11 +19,14 @@
     <div><button class="rickStyleButton" onclick="Pressed()">Search</button></div>
     <div><button class="btn">Dark</button></div>
 
-    <div class="cardholder">
-      <div class="rickycard">
-        <img id="cardimg" alt="Rick & Morty character">
-        <div class="container" id="cardbody"></div>
+    <div class="card" style="width: 18rem;">
+      <img src="..." class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title"></h5>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <a href="#" class="btn btn-primary">Go somewhere</a>
       </div>
+    </div>
     </div>
 
 
