--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
 </head>
 
 <body class="light-theme">
-  <div style="text-align: center;">
+  <div class="text-center">
     <h1 class="rickBanner">Rick & Morty!</h1>
 
     <img class="mortyPickleImg" src="https://rickandmortyapi.com/api/character/avatar/265.jpeg" />
@@ -20,10 +20,13 @@
     <div><button class="rickStyleButton" onclick="Pressed()">Search</button></div>
     <div><button class="btn">Dark</button></div>
 
-    <div class="card" style="width: 18rem;">
-      <img class="card-img-top" id="cardimg">
-      <div class="card-body" id="cardbody"></div>
+    <div class="d-flex justify-content-center my-2">
+      <div class="card" style="width: 18rem;">
+        <img class="card-img-top" id="cardimg">
+        <div class="card-body" id="cardbody"></div>
+      </div>
     </div>
+
   </div>
 
 
