enter listener deleted.

--- a/main.html
+++ b/main.html
@@ -17,7 +17,7 @@
     <img class="mortyPickleImg" src="https://rickandmortyapi.com/api/character/avatar/265.jpeg" />
     <div><input type="text" id="inp" placeholder="Search for a character!" /></div>
     <br>
-    <div><button class="rickStyleButton" onclick="Pressed()" onkeypress="enterListener()">Search</button></div>
+    <div><button class="rickStyleButton" onclick="Pressed()">Search</button></div>
     <div><button class="btn">Dark</button></div>
 
     <div class="d-flex justify-content-center my-2">
