damn that way annoying

--- a/main.html
+++ b/main.html
@@ -13,10 +13,11 @@
 <body class="light-theme bg-info bg-gradient">
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand mx-5" href="#">Rick and Morty!</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-  
+
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mb-auto">
         <li class="nav-item active">
@@ -29,28 +30,29 @@
       <form class="form-inline my-2 my-lg-0">
         <input class="form-control mr-sm-2 mx-2" type="search" placeholder="Search Character" aria-label="Search">
       </form>
+      <button class="btn btn-primary ms-auto me-2">Dark</button>
     </div>
   </nav>
+
+
   <div class="text-center">
     <h1 class="rickBanner my-4">Rick & Morty!</h1>
+    <img class="img-thumbnail rounded shadow-lg mb-3 my-3"
+      src="https://rickandmortyapi.com/api/character/avatar/265.jpeg" />
+  </div>
 
-    <img class="mortyPickleImg shadow-lg p-0 mb-5 my-3 bg-body rounded" src="https://rickandmortyapi.com/api/character/avatar/265.jpeg" />
-    <div><input class="shadow p-0 bg-body" roundedtype="text" id="inp" placeholder="Search for a character!" /></div>
-    <br>
-    <div><button class="shadow p-0 bg-body rounded rickStyleButton" onclick="Pressed()">Search</button></div>
-    <div><button class="btn">Dark</button></div>
+  <div class="input-group mb-3 w-25 m-auto">
+    <input class="form-control shadow" type="search" id="inp" placeholder="Search for a character" aria-label="Search">
+    <button type="button" class="btn btn-primary shadow" onclick="Pressed()">Search</button>
+  </div>
 
-    <div class="d-flex justify-content-center my-2">
-      <div class="card" style="width: 18rem;">
-        <img class="card-img-top" id="cardimg">
-        <div class="card-body" id="cardbody"></div>
-      </div>
+  <div class="d-flex justify-content-center my-2">
+    <div class="card" style="width: 18rem;">
+      <img class="card-img-top" id="cardimg">
+      <div class="card-body" id="cardbody"></div>
     </div>
-
   </div>
 
-
-  </div>
 </body>
 
 <script src="app.js"></script>
