--- a/main.html
+++ b/main.html
@@ -40,11 +40,17 @@
     <img class="img-thumbnail rounded shadow-lg mb-3 my-3"
       src="https://rickandmortyapi.com/api/character/avatar/265.jpeg" />
   </div>
-
-  <div class="input-group mb-3 w-25 m-auto">
-    <input class="form-control shadow" type="search" id="inp" placeholder="Search for a character" aria-label="Search">
-    <button type="button" class="btn btn-primary shadow" onclick="Pressed()">Search</button>
+  <div class="container">
+    <div class="row">
+      <div class="col col-lg-2 input-group mb-3 m-auto">
+        <input class="form-control shadow" type="search" id="inp" placeholder="Search for a character"
+          aria-label="Search">
+        <button type="button" class="btn btn-primary shadow" onclick="Pressed()">Search</button>
+      </div>
+    </div>
   </div>
+
+
 
   <div class="d-flex justify-content-center my-2">
     <div class="card" style="width: 18rem;">
