--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
 <body class="light-theme bg-info bg-gradient">
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand mx-5" href="#">Rick and Morty!</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
