--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
 
 <body class="light-theme bg-info bg-gradient">
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand mx-5" href="#">Rick and Morty!</a>
+    <a class="navbar-brand mx-3" href="#">Rick and Morty!</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -21,13 +21,13 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mb-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only"></span></a>
+          <a class="nav-link mx-sm-2" href="#">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link mx-2" href="#">Page 2</a>
+          <a class="nav-link mx-sm-2" href="#">Page 2</a>
         </li>
       </ul>
-      <form class="form-inline my-2 my-lg-0">
+      <form class="d-flex d-sm-inline-flex my-2 my-lg-0">
         <input class="form-control mr-sm-2 mx-2" type="search" placeholder="Search Character" aria-label="Search">
       </form>
       <button class="btn btn-primary ms-auto me-2">Dark</button>
@@ -41,11 +41,13 @@
       src="https://rickandmortyapi.com/api/character/avatar/265.jpeg" />
   </div>
   <div class="container">
-    <div class="row">
-      <div class="col col-lg-2 input-group mb-3 m-auto">
-        <input class="form-control shadow" type="search" id="inp" placeholder="Search for a character"
-          aria-label="Search">
-        <button type="button" class="btn btn-primary shadow" onclick="Pressed()">Search</button>
+    <div class="row justify-content-center">
+      <div class="col-lg-4 col-md-4">
+        <div class="input-group mb-3 m-auto">
+          <input class="form-control shadow" type="search" id="inp" placeholder="Search for a character"
+            aria-label="Search">
+          <button type="button" class="btn btn-primary shadow" onclick="Pressed()">Search</button>
+        </div>
       </div>
     </div>
   </div>
