--- a/main.html
+++ b/main.html
@@ -53,7 +53,7 @@
   </div>
 
   <div class="d-flex justify-content-center my-2">
-    <div class="card" style="width: 18rem;">
+    <div class="card text-bg-light border-dark" style="width: 18rem;">
       <img class="card-img-top" id="cardimg">
       <div class="card-body" id="cardbody"></div>
     </div>
