toggler for light and dark theme

--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
     integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 </head>
 
-<body class="light-theme bg-info bg-gradient">
+<body class="bg-info bg-gradient">
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand mx-3" href="#">Rick and Morty!</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -30,7 +30,7 @@
       <form class="d-flex d-sm-inline-flex my-2 my-lg-0">
         <input class="form-control mr-sm-2 mx-2" type="search" placeholder="Search Character" aria-label="Search">
       </form>
-      <button class="btn btn-primary ms-auto me-2">Dark</button>
+      <button class="btn btn-primary ms-auto me-2" onclick="switchTheme()">Dark</button>
     </div>
   </nav>
 
