--- a/main.html
+++ b/main.html
@@ -30,7 +30,7 @@
       <form class="d-flex d-sm-inline-flex my-2 my-lg-0">
         <input class="form-control mr-sm-2 mx-2" type="search" placeholder="Search Character" aria-label="Search">
       </form>
-      <button class="btn btn-primary ms-auto me-2" onclick="switchTheme()">Dark</button>
+      <button class="btn btn-primary ms-auto me-2" id="themebutton" onclick="switchTheme()">Dark</button>
     </div>
   </nav>
 
