--- a/main.html
+++ b/main.html
@@ -36,7 +36,7 @@
 
 
   <div class="text-center">
-    <h1 class="my-4 Title">Rick & Morty!</h1>
+    <h1 class="text-black my-4" id="Title">Rick & Morty!</h1>
     <img class="img-thumbnail rounded shadow-lg mb-3 my-3"
       src="https://rickandmortyapi.com/api/character/avatar/265.jpeg" />
   </div>
