--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
 </head>
 
 <body class="bg-info bg-gradient">
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <nav class="navbar navbar-expand-lg" style="background-color: #4b2fff">
     <a class="navbar-brand mx-3" href="#">Rick and Morty!</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
