--- a/main.html
+++ b/main.html
@@ -60,7 +60,8 @@
           <button type="button" data-bs-target="#carouselIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
           <button type="button" data-bs-target="#carouselIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
         </div>
-        <div class="carousel-inner" id="carouselInner">
+        
+        <!-- <div class="carousel-inner" id="carouselInner">
           <div class="carousel-item active">
             <img src="https://rickandmortyapi.com/api/character/avatar/425.jpeg" class="d-block mx-auto img-fluid">
           </div>
@@ -72,7 +73,8 @@
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselIndicators" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span> -->
+
           <span class="visually-hidden">Previous</span>
         </button>
         <button class="carousel-control-next" type="button" data-bs-target="#carouselIndicators" data-bs-slide="next">
