--- a/main.html
+++ b/main.html
@@ -60,20 +60,11 @@
           <button type="button" data-bs-target="#carouselIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
           <button type="button" data-bs-target="#carouselIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
         </div>
-        
-        <!-- <div class="carousel-inner" id="carouselInner">
-          <div class="carousel-item active">
-            <img src="https://rickandmortyapi.com/api/character/avatar/425.jpeg" class="d-block mx-auto img-fluid">
-          </div>
-          <div class="carousel-item">
-            <img src="https://rickandmortyapi.com/api/character/avatar/30.jpeg" class="d-block mx-auto img-fluid">
-          </div>
-          <div class="carousel-item">
-            <img src="https://rickandmortyapi.com/api/character/avatar/69.jpeg" class="d-block mx-auto img-fluid">
-          </div>
-        </div>
+
+        <div class="carousel-inner" id="carouselInner"></div>
+
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselIndicators" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span> -->
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
 
           <span class="visually-hidden">Previous</span>
         </button>
@@ -99,3 +90,13 @@
   integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 
 </html>
+
+<!-- <div class="carousel-item active">
+            <img src="https://rickandmortyapi.com/api/character/avatar/425.jpeg" class="d-block mx-auto img-fluid">
+          </div>
+          <div class="carousel-item">
+            <img src="https://rickandmortyapi.com/api/character/avatar/30.jpeg" class="d-block mx-auto img-fluid">
+          </div>
+          <div class="carousel-item">
+            <img src="https://rickandmortyapi.com/api/character/avatar/69.jpeg" class="d-block mx-auto img-fluid">
+          </div> -->
