--- a/main.html
+++ b/main.html
@@ -5,12 +5,13 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Simple Website</title>
+  <title>Rick & Morty Website</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 </head>
 
 <body class="bg-info bg-gradient">
+
   <nav class="navbar navbar-expand-lg" style="background-color: #4b2fff">
     <a class="navbar-brand mx-3 text-white" href="#">Rick & Morty API</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -28,28 +29,18 @@
         </li>
       </ul>
       <form class="d-flex d-sm-inline-flex my-2 my-lg-0">
-        <input class="form-control mr-sm-2 mx-2" type="search" placeholder="Search Character" aria-label="Search">
+        <div class="input-group m-auto">
+          <input class="form-control mr-sm-2" id="navsearch" type="search" placeholder="Search Character"
+            aria-label="Search">
+          <button type="button" class="btn btn-primary shadow" onclick="Pressed()">Search</button>
+        </div>
       </form>
       <button class="btn btn-success bg-gradient ms-auto me-3" id="themebutton" onclick="switchTheme()">Dark</button>
     </div>
   </nav>
 
-  <div class="text-center">
-    <h1 class="text-black my-4" id="Title">Rick & Morty!</h1>
-    <img class="img-thumbnail rounded shadow-lg mb-3 my-3"
-      src="https://rickandmortyapi.com/api/character/avatar/265.jpeg" />
-  </div>
-  <div class="container">
-    <div class="row justify-content-center">
-      <div class="col-lg-4 col-md-4">
-        <div class="input-group mb-3 m-auto">
-          <input class="form-control shadow" type="search" id="inp" placeholder="Search for a character"
-            aria-label="Search">
-          <button type="button" class="btn btn-primary shadow" onclick="Pressed()">Search</button>
-        </div>
-      </div>
-    </div>
-  </div>
+  <img class="img-fluid shadow-lg mb-3"
+    src="https://cdn.shopify.com/s/files/1/0346/8063/5529/collections/rick-morty-collection-banner_2592x.jpg?v=1590095280" />
 
   <div class="row justify-content-center">
     <div class="col-md-4">
@@ -65,7 +56,6 @@
 
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselIndicators" data-bs-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-
           <span class="visually-hidden">Previous</span>
         </button>
         <button class="carousel-control-next" type="button" data-bs-target="#carouselIndicators" data-bs-slide="next">
@@ -90,13 +80,3 @@
   integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 
 </html>
-
-<!-- <div class="carousel-item active">
-            <img src="https://rickandmortyapi.com/api/character/avatar/425.jpeg" class="d-block mx-auto img-fluid">
-          </div>
-          <div class="carousel-item">
-            <img src="https://rickandmortyapi.com/api/character/avatar/30.jpeg" class="d-block mx-auto img-fluid">
-          </div>
-          <div class="carousel-item">
-            <img src="https://rickandmortyapi.com/api/character/avatar/69.jpeg" class="d-block mx-auto img-fluid">
-          </div> -->
