new rick card to use

--- a/main.html
+++ b/main.html
@@ -67,10 +67,18 @@
   </div>
 
   <div class="d-flex justify-content-center my-2">
-    <div class="card text-bg-light border-dark" style="width: 18rem;">
-      <img class="card-img-top" id="cardimg">
-      <div class="card-body" id="cardbody"></div>
+
+    <div class="card bg-dark text-white mb-3" style="max-width: 540px;">
+      <div class="row g-0">
+        <div class="col-md-4">
+          <img id="cardimg" class="img-fluid rounded-start">
+        </div>
+        <div class="col-md-8">
+          <div class="card-body p-1 ms-1" id="cardbody"></div>
+        </div>
+      </div>
     </div>
+
   </div>
 
 </body>
