--- a/main.html
+++ b/main.html
@@ -69,7 +69,7 @@
 
   <div class="d-flex justify-content-center my-2">
 
-    <div class="card bg-dark text-white mb-3" style="max-width: 540px;">
+    <div class="card bg-secondary text-white mb-3 shadow" style="max-width: 540px;">
       <div class="row g-0">
         <div class="col-md-4">
           <img id="cardimg" class="img-fluid rounded-start">
