--- a/index.html
+++ b/index.html
@@ -23,17 +23,17 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mb-auto">
         <li class="nav-item active">
-          <a class="nav-link mx-sm-2 text-white" href="#">Home</a>
+          <a class="nav-link mx-sm-2 text-white" href="index.html">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link mx-sm-2 text-white" href="#">The Portal</a>
+          <a class="nav-link mx-sm-2 text-white" href="portal.html">The Portal</a>
         </li>
       </ul>
       <form class="d-flex d-sm-inline-flex my-2 my-lg-0">
         <div class="input-group m-auto">
           <input class="form-control mr-sm-2" id="navsearch" type="search" placeholder="Search Character"
             aria-label="Search">
-          <button type="button" class="btn btn-primary shadow" onclick="Pressed()">Search</button>
+          <button type="button" class="btn btn-primary shadow">Search</button>
         </div>
       </form>
       <button class="btn btn-success bg-gradient ms-auto me-3" id="themebutton" onclick="switchTheme()">Dark</button>
