--- a/portal.html
+++ b/portal.html
@@ -37,11 +37,51 @@
             </form>
         </div>
     </nav>
+
+    <!-- <div class="col-sm-6">
+        <div class="card bg-transparent text-white">
+            <h5 class="card-header bg-success">Featured</h5>
+            <div class="card-body bg-body bg-opacity-10">
+                <h5 class="card-title">Special title treatment</h5>
+                <h6 class="card-subtitle mb-2">Card subtitle</h6>
+                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+            </div>
+        </div>
+    </div> -->
+
+    <div class="container mt-2">
+        <div class="row" id="cardrow">
+
+        </div>
+    </div>
+
+
 </body>
 
-<script src="app.js"></script>
+<script src="portal.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
     crossorigin="anonymous"></script>
 
 </html>
+
+<!-- <div class="col-sm-6">
+    <div class="card">
+        <h5 class="card-header">Featured</h5>
+        <div class="card-body">
+            <h5 class="card-title">Special title treatment</h5>
+            <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+        </div>
+    </div>
+</div>
+<div class="col-sm-6">
+    <div class="card">
+        <h5 class="card-header">Featured</h5>
+        <div class="card-body">
+            <h5 class="card-title">Special title treatment</h5>
+            <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+        </div>
+    </div>
+</div> -->
