--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <a class="nav-link mx-sm-2 text-white" href="index.html">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link mx-sm-2 text-white" href="portal.html">The Portal</a>
+          <a class="nav-link mx-sm-2 text-white" href="portal.html">Portal</a>
         </li>
       </ul>
       <form class="d-flex d-sm-inline-flex my-2 my-lg-0">
