--- a/portal.html
+++ b/portal.html
@@ -13,7 +13,9 @@
 
 <body>
     <nav class="navbar navbar-expand-lg bg-transparent">
-        <a class="navbar-brand mx-3 text-white" href="#">Rick & Morty API</a>
+        <a class="navbar-brand mx-2" href="#">
+            <img src="https://i.dlpng.com/static/png/6975728_preview.png" class="pb-2" alt="" width="120" height="45">
+        </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -25,7 +27,7 @@
                     <a class="nav-link mx-sm-2 text-white" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link mx-sm-2 text-white" href="portal.html">The Portal</a>
+                    <a class="nav-link mx-sm-2 text-white" href="portal.html">Portal</a>
                 </li>
             </ul>
             <form class="d-flex d-sm-inline-flex my-2 my-lg-0">
@@ -37,17 +39,6 @@
             </form>
         </div>
     </nav>
-
-    <!-- <div class="col-sm-6">
-        <div class="card bg-transparent text-white">
-            <h5 class="card-header bg-success">Featured</h5>
-            <div class="card-body bg-body bg-opacity-10">
-                <h5 class="card-title">Special title treatment</h5>
-                <h6 class="card-subtitle mb-2">Card subtitle</h6>
-                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-            </div>
-        </div>
-    </div> -->
 
     <div class="container mt-2">
         <div class="row" id="cardrow">
@@ -64,24 +55,3 @@
     crossorigin="anonymous"></script>
 
 </html>
-
-<!-- <div class="col-sm-6">
-    <div class="card">
-        <h5 class="card-header">Featured</h5>
-        <div class="card-body">
-            <h5 class="card-title">Special title treatment</h5>
-            <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-        </div>
-    </div>
-</div>
-<div class="col-sm-6">
-    <div class="card">
-        <h5 class="card-header">Featured</h5>
-        <div class="card-body">
-            <h5 class="card-title">Special title treatment</h5>
-            <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-        </div>
-    </div>
-</div> -->
