--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </li>
       </ul>
       <form class="d-flex d-sm-inline-flex my-2 my-lg-0">
-        <div class="input-group m-auto">
+        <div class="input-group input-group-sm m-auto">
           <input class="form-control mr-sm-2" id="navsearch" type="search" placeholder="Search Character"
             aria-label="Search">
           <button type="button" class="btn btn-primary shadow">Search</button>
