--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 <body class="bg-info bg-gradient">
 
   <nav class="navbar navbar-expand-lg" style="background-color: #4b2fff">
-    <a class="navbar-brand mx-3 text-white" href="#">Rick & Morty</a>
+    <a class="navbar-brand mx-2" href="#">
+      <img src="https://i.dlpng.com/static/png/6975728_preview.png" class="pb-2" alt="" width="120" height="45">
+    </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
