--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="icon" type="image/x-icon" href="assets/rickDerp.png">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body class="bg-info bg-gradient">
@@ -30,6 +30,9 @@
         </li>
         <li class="nav-item">
           <a class="nav-link mx-sm-2 text-white" href="portal.html">Portal</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link mx-sm-2 text-white" href="seasons.html">Seasons</a>
         </li>
       </ul>
       <form class="d-flex d-sm-inline-flex my-2 my-lg-0">
