--- a/seasons.html
+++ b/seasons.html
@@ -55,7 +55,7 @@
                     <div class="card-body">
                         <img src="https://upload.wikimedia.org/wikipedia/en/b/b8/Rick_and_Morty_season_1.png"
                             class="img-thumbnail rounded mb-2" alt="Season 1">
-                        <button type="button" class="btn btn-primary" data-bs-toggle="modal"
+                        <button type="button" class="btn btn-outline-success" data-bs-toggle="modal"
                             data-bs-target="#episodeModal">
                             Episodes
                         </button>
@@ -67,7 +67,7 @@
                     <div class="card-body">
                         <img src="https://upload.wikimedia.org/wikipedia/en/b/b1/Rick_and_Morty_season_2.png"
                             class="img-thumbnail rounded mb-2" alt="Season 2">
-                        <button type="button" class="btn btn-primary" data-bs-toggle="modal"
+                        <button type="button" class="btn btn-outline-success" data-bs-toggle="modal"
                             data-bs-target="#episodeModal">
                             Episodes
                         </button>
@@ -81,7 +81,7 @@
                     <div class="card-body">
                         <img src="https://upload.wikimedia.org/wikipedia/en/5/52/Rick_and_Morty_season_3.png"
                             class="img-thumbnail rounded mb-2" alt="Season 3">
-                        <button type="button" class="btn btn-primary" data-bs-toggle="modal"
+                        <button type="button" class="btn btn-outline-success" data-bs-toggle="modal"
                             data-bs-target="#episodeModal">
                             Episodes
                         </button>
@@ -93,7 +93,7 @@
                     <div class="card-body">
                         <img src="https://upload.wikimedia.org/wikipedia/en/1/17/Rick_and_Morty_season_4.jpg"
                             class="img-thumbnail rounded mb-2" alt="Season 4">
-                        <button type="button" class="btn btn-primary" data-bs-toggle="modal"
+                        <button type="button" class="btn btn-outline-success" data-bs-toggle="modal"
                             data-bs-target="#episodeModal">
                             Episodes
                         </button>
@@ -107,7 +107,7 @@
                     <div class="card-body">
                         <img src="https://upload.wikimedia.org/wikipedia/en/7/7a/Rick_and_Morty_season_5.jpg"
                             class="img-thumbnail rounded mb-2" alt="Season 5">
-                        <button type="button" class="btn btn-primary" data-bs-toggle="modal"
+                        <button type="button" class="btn btn-outline-success" data-bs-toggle="modal"
                             data-bs-target="#episodeModal">
                             Episodes
                         </button>
