--- a/portal.html
+++ b/portal.html
@@ -38,7 +38,7 @@
                 <div class="input-group input-group-sm m-auto">
                     <input class="form-control mr-sm-2" id="navsearch" type="search" placeholder="Search Locations"
                         aria-label="Search">
-                    <button type="button" class="btn btn-primary shadow text-white">Search</button>
+                    <button type="button" class="btn btn-dark shadow text-white">Search</button>
                 </div>
             </form>
         </div>
