--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body class="bg-info bg-gradient">
 
-  <nav class="navbar navbar-expand-lg" style="background-color: #4b2fff">
+  <nav class="navbar navbar-expand-lg" id="navbar" style="background-color: #4b2fff">
     <a class="navbar-brand mx-2" href="#">
       <img src="https://i.dlpng.com/static/png/6975728_preview.png" class="pb-2" alt="" width="120" height="45">
     </a>
@@ -58,7 +58,7 @@
           <button type="button" data-bs-target="#carouselIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
           <button type="button" data-bs-target="#carouselIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
         </div>
-
+      
         <div class="carousel-inner" id="carouselInner"></div>
 
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselIndicators" data-bs-slide="prev">
