--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
   <link rel="stylesheet" href="css/main.css">
 </head>
 
-<body class="bg-info bg-gradient">
+<body>
 
-  <nav class="navbar navbar-expand-lg" id="navbar" style="background-color: #4b2fff">
+  <nav class="navbar navbar-expand-lg" id="navbar">
     <a class="navbar-brand mx-2" href="#">
       <img src="https://i.dlpng.com/static/png/6975728_preview.png" class="pb-2" alt="" width="120" height="45">
     </a>
@@ -46,12 +46,11 @@
     </div>
   </nav>
 
-  <div class="container m-0 p-0 mb-6">
-    <img class="img-fluid shadow-lg mb-3 position-absolute"
-    src="https://cdn.shopify.com/s/files/1/0346/8063/5529/collections/rick-morty-collection-banner_2592x.jpg?v=1590095280" />
+    <!-- <img class="img-fluid shadow-lg mb-3"
+    src="https://cdn.shopify.com/s/files/1/0346/8063/5529/collections/rick-morty-collection-banner_2592x.jpg?v=1590095280" /> -->
 
-    <div class="row position-relative top-50 start-50 me-3">
-      <div class="col-md-4 mt-3 mb-5">
+    <div class="row justify-content-center me-3">
+      <div class="col-md-4 mt-3">
         <div id="carouselIndicators" class="carousel slide" data-bs-ride="true">
           <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselIndicators" data-bs-slide-to="0" class="active"
@@ -76,7 +75,6 @@
         </div>
       </div>
     </div>
-  </div>
 
 
   <div class="row my-3 justify-content-center" id="cardrow"></div>
