--- a/seasons.html
+++ b/seasons.html
@@ -56,7 +56,7 @@
                         <img src="https://upload.wikimedia.org/wikipedia/en/b/b8/Rick_and_Morty_season_1.png"
                             class="img-thumbnail rounded mb-2" style="width: 300px; height:350px;" alt="Season 1">
                         <button type="button" class="btn btn-outline-success" data-bs-toggle="modal"
-                            data-bs-target="#episodeModal">
+                            data-bs-target="#episodeModal1">
                             Episodes
                         </button>
                     </div>
@@ -68,7 +68,7 @@
                         <img src="https://upload.wikimedia.org/wikipedia/en/b/b1/Rick_and_Morty_season_2.png"
                             class="img-thumbnail rounded mb-2" style="width: 300px; height:350px;" alt="Season 2">
                         <button type="button" class="btn btn-outline-success" data-bs-toggle="modal"
-                            data-bs-target="#episodeModal">
+                            data-bs-target="#episodeModal2">
                             Episodes
                         </button>
                     </div>
@@ -82,7 +82,7 @@
                         <img src="https://upload.wikimedia.org/wikipedia/en/5/52/Rick_and_Morty_season_3.png"
                             class="img-thumbnail rounded mb-2" style="width: 300px; height:350px;" alt="Season 3">
                         <button type="button" class="btn btn-outline-success" data-bs-toggle="modal"
-                            data-bs-target="#episodeModal">
+                            data-bs-target="#episodeModal3">
                             Episodes
                         </button>
                     </div>
@@ -94,7 +94,7 @@
                         <img src="https://upload.wikimedia.org/wikipedia/en/1/17/Rick_and_Morty_season_4.jpg"
                             class="img-thumbnail rounded mb-2" style="width: 300px; height:350px;" alt="Season 4">
                         <button type="button" class="btn btn-outline-success" data-bs-toggle="modal"
-                            data-bs-target="#episodeModal">
+                            data-bs-target="#episodeModal4">
                             Episodes
                         </button>
                     </div>
@@ -108,7 +108,7 @@
                         <img src="https://upload.wikimedia.org/wikipedia/en/7/7a/Rick_and_Morty_season_5.jpg"
                             class="img-thumbnail rounded mb-2" style="width: 300px; height:350px;" alt="Season 5">
                         <button type="button" class="btn btn-outline-success" data-bs-toggle="modal"
-                            data-bs-target="#episodeModal">
+                            data-bs-target="#episodeModal5">
                             Episodes
                         </button>
                     </div>
@@ -116,6 +116,8 @@
             </div>
         </div>
     </div>
+
+    <div id="modalDiv"></div>
 
 </body>
 
