text-shadow, welcome to the portal?

--- a/portal.html
+++ b/portal.html
@@ -43,6 +43,16 @@
             </form>
         </div>
     </nav>
+    <div class="row justify-content-center">
+        <div class="card text-center text-white bg-success bg-opacity-75 border-0" style="width: 40rem;">
+            <div class="card-body">
+                <h2 class="card-title" style="text-shadow: 2px 2px 3px #000000;">Welcome to the Portal</h2>
+                <p class="card-text">These are all the locations from the show!</p>
+            </div>
+        </div>
+    </div>
+
+
 
     <div class="container mt-2">
         <div class="row" id="cardrow"></div>
