theme button color change... one small issue

--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
           <button type="button" class="btn btn-primary shadow">Search</button>
         </div>
       </form>
-      <button class="btn btn-success bg-gradient ms-auto me-3" id="themebutton" onclick="switchTheme()">Dark</button>
+      <div class="btn btn-success bg-gradient ms-auto me-3" id="themebutton" onclick="switchTheme()">
+        <button onclick="switchTheme()">Dark</button>
+      </div>
     </div>
   </nav>
 
