button fixed, now fix logic

--- a/index.html
+++ b/index.html
@@ -42,41 +42,39 @@
           <button type="button" class="btn btn-primary shadow">Search</button>
         </div>
       </form>
-      <div class="btn btn-success bg-gradient ms-auto me-3" id="themebutton" onclick="switchTheme()">
-        <button onclick="switchTheme()">Dark</button>
+      <div class="btn btn-dark bg-gradient ms-auto me-3" id="themebutton" onclick="switchTheme()">
+        Dark
       </div>
     </div>
   </nav>
 
-    <!-- <img class="img-fluid shadow-lg mb-3"
+  <!-- <img class="img-fluid shadow-lg mb-3"
     src="https://cdn.shopify.com/s/files/1/0346/8063/5529/collections/rick-morty-collection-banner_2592x.jpg?v=1590095280" /> -->
 
-    <div class="row justify-content-center me-3">
-      <div class="col-md-4 mt-3">
-        <div id="carouselIndicators" class="carousel slide" data-bs-ride="true">
-          <div class="carousel-indicators">
-            <button type="button" data-bs-target="#carouselIndicators" data-bs-slide-to="0" class="active"
-              aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#carouselIndicators" data-bs-slide-to="1"
-              aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#carouselIndicators" data-bs-slide-to="2"
-              aria-label="Slide 3"></button>
-          </div>
-
-          <div class="carousel-inner" id="carouselInner"></div>
-
-          <button class="carousel-control-prev" type="button" data-bs-target="#carouselIndicators" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#carouselIndicators" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </button>
-
+  <div class="row justify-content-center me-3">
+    <div class="col-md-4 mt-3">
+      <div id="carouselIndicators" class="carousel slide" data-bs-ride="true">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselIndicators" data-bs-slide-to="0" class="active"
+            aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
         </div>
+
+        <div class="carousel-inner" id="carouselInner"></div>
+
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselIndicators" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselIndicators" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+
       </div>
     </div>
+  </div>
 
 
   <div class="row my-3 justify-content-center" id="cardrow"></div>
