--- a/html/index.html
+++ b/html/index.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="../css/main.css">
 </head>
 
-<body>
+<body class="backgroundImage">
 
   <nav class="navbar navbar-expand-lg" id="navbar">
     <a class="navbar-brand mx-2" href="#">
@@ -42,7 +42,7 @@
           <button type="button" class="btn btn-primary shadow">Search</button>
         </div>
       </form>
-      <button class="btn btn-success bg-gradient ms-auto me-3" id="themebutton" onclick="switchTheme()">Dark</button>
+      <button class="btn btn-dark ms-auto me-3" id="themebutton" onclick="switchTheme()">Dark</button>
     </div>
   </nav>
 
