--- a/html/index.html
+++ b/html/index.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="../css/main.css">
 </head>
 
-<body class="backgroundImage">
+<body class="otherBackground">
 
   <nav class="navbar navbar-expand-lg" id="navbar">
     <a class="navbar-brand mx-2" href="#">
