--- a/html/index.html
+++ b/html/index.html
@@ -42,22 +42,16 @@
           <button type="button" class="btn btn-primary shadow">Search</button>
         </div>
       </form>
-      <<<<<<< HEAD:html/index.html <button class="btn btn-dark ms-auto me-3" id="themebutton" onclick="switchTheme()">
+      <button class="btn btn-dark ms-auto me-3" id="themebutton" onclick="switchTheme()">
         Dark</button>
     </div>
   </nav>
-
-  =======
   <div class="btn btn-dark bg-gradient ms-auto me-3" id="themebutton" onclick="switchTheme()">
     Dark
   </div>
   </div>
   </nav>
 
-  <!-- <img class="img-fluid shadow-lg mb-3"
-    src="https://cdn.shopify.com/s/files/1/0346/8063/5529/collections/rick-morty-collection-banner_2592x.jpg?v=1590095280" /> -->
-
-  >>>>>>> main:index.html
   <div class="row justify-content-center me-3">
     <div class="col-md-4 mt-3">
       <div id="carouselIndicators" class="carousel slide" data-bs-ride="true">
