--- a/html/index.html
+++ b/html/index.html
@@ -42,14 +42,9 @@
           <button type="button" class="btn btn-primary shadow">Search</button>
         </div>
       </form>
-      <button class="btn btn-dark ms-auto me-3" id="themebutton" onclick="switchTheme()">
+      <button class="btn btn-dark bg-gradient ms-auto me-3" id="themebutton" onclick="switchTheme()">
         Dark</button>
     </div>
-  </nav>
-  <div class="btn btn-dark bg-gradient ms-auto me-3" id="themebutton" onclick="switchTheme()">
-    Dark
-  </div>
-  </div>
   </nav>
 
   <div class="row justify-content-center me-3">
