--- a/html/seasons.html
+++ b/html/seasons.html
@@ -49,7 +49,8 @@
             <div class="col-sm-4">
                 <div class="card bg-transparent border-0 text-center">
                     <img src="https://upload.wikimedia.org/wikipedia/en/b/b8/Rick_and_Morty_season_1.png"
-                        class="img-thumbnail rounded mb-2" style="width: 250px; height:350px;" alt="Season 1">
+                        class="img-thumbnail rounded mb-1 mx-auto d-block" style="width: 250px; height:350px;"
+                        alt="Season 1">
                     <div class="card-body">
                         <button type="button" class="btn btn-outline-success" data-bs-toggle="modal"
                             data-bs-target="#episodeModal1">
@@ -61,7 +62,8 @@
             <div class="col-sm-4">
                 <div class="card bg-transparent border-0 text-center">
                     <img src="https://upload.wikimedia.org/wikipedia/en/b/b1/Rick_and_Morty_season_2.png"
-                        class="img-thumbnail rounded mb-2" style="width: 250px; height:350px;" alt="Season 2">
+                        class="img-thumbnail rounded mb-1 mx-auto d-block" style="width: 250px; height:350px;"
+                        alt="Season 2">
                     <div class="card-body">
                         <button type="button" class="btn btn-outline-success" data-bs-toggle="modal"
                             data-bs-target="#episodeModal2">
@@ -75,7 +77,8 @@
             <div class="col-sm-4">
                 <div class="card bg-transparent border-0 text-center">
                     <img src="https://upload.wikimedia.org/wikipedia/en/5/52/Rick_and_Morty_season_3.png"
-                        class="img-thumbnail rounded mb-2" style="width: 250px; height:350px;" alt="Season 3">
+                        class="img-thumbnail rounded mb-1 mx-auto d-block" style="width: 250px; height:350px;"
+                        alt="Season 3">
                     <div class="card-body">
                         <button type="button" class="btn btn-outline-success" data-bs-toggle="modal"
                             data-bs-target="#episodeModal3">
@@ -87,7 +90,8 @@
             <div class="col-sm-4">
                 <div class="card bg-transparent border-0 text-center">
                     <img src="https://upload.wikimedia.org/wikipedia/en/1/17/Rick_and_Morty_season_4.jpg"
-                        class="img-thumbnail rounded mb-2" style="width: 250px; height:350px;" alt="Season 4">
+                        class="img-thumbnail rounded mb-1 mx-auto d-block" style="width: 250px; height:350px;"
+                        alt="Season 4">
                     <div class="card-body">
                         <button type="button" class="btn btn-outline-success" data-bs-toggle="modal"
                             data-bs-target="#episodeModal4">
@@ -101,7 +105,8 @@
             <div class="col-sm-4">
                 <div class="card bg-transparent border-0 text-center">
                     <img src="https://upload.wikimedia.org/wikipedia/en/7/7a/Rick_and_Morty_season_5.jpg"
-                        class="img-thumbnail rounded mb-2" style="width: 250px; height:350px;" alt="Season 5">
+                        class="img-thumbnail rounded mb-1 mx-auto d-block" style="width: 250px; height:350px;"
+                        alt="Season 5">
                     <div class="card-body">
                         <button type="button" class="btn btn-outline-success" data-bs-toggle="modal"
                             data-bs-target="#episodeModal5">
