--- a/html/seasons.html
+++ b/html/seasons.html
@@ -33,6 +33,9 @@
                 <li class="nav-item">
                     <a class="nav-link mx-sm-2 text-white" href="seasons.html">Seasons</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link mx-sm-2 text-white" href="creators.html">Creators</a>
+                </li>
             </ul>
             <form class="d-flex d-sm-inline-flex my-2 my-lg-0">
                 <div class="input-group input-group-sm m-auto">
