--- a/html/creators.html
+++ b/html/creators.html
@@ -40,15 +40,25 @@
         </div>
     </nav>
 
-
-    <!-- <div class="row justify-content-center">
-        <div class="card text-center text-white bg-success bg-opacity-75 border-0" style="width: 40rem;">
-            <div class="card-body">
-                <h2 class="card-title" style="text-shadow: 2px 2px 3px #000000;">Welcome to the Portal</h2>
-                <p class="card-text">These are all the locations from the show!</p>
+    <div class="row justify-content-center mt-5">
+        <div class="card" style="width: 40rem;">
+            <div class="card-body text-center">
+                <h2 class="card-title">The Creators</h2>
+                <div class="row justify-content-center">
+                    <div class="col-sm-4">
+                        <img src="https://static.wikia.nocookie.net/gravityfalls/images/2/2f/Justin_Roiland.jpg/revision/latest?cb=20200204214613"
+                            class="img-thumbnail" alt="Justin" style="width: 200px; height:250px;">
+                        <p class="card-text">Justin Roiland</p>
+                    </div>
+                    <div class="col-sm-4">
+                        <img src="https://m.media-amazon.com/images/M/MV5BMjEzMDY2NzI3MF5BMl5BanBnXkFtZTcwODY5MjI3NA@@._V1_.jpg"
+                            class="img-thumbnail" alt="Dan" style="width: 200px; height:250px;">
+                        <p class="card-text">Dan Harmon</p>
+                    </div>
+                </div>
             </div>
         </div>
-    </div> -->
+    </div>
 
 
 </body>
