--- a/html/seasons.html
+++ b/html/seasons.html
@@ -44,7 +44,7 @@
         </div>
     </nav>
 
-    <div class="container">
+    <div class="container" id="season-container">
         <div class="row">
             <div class="col-sm-4">
                 <div class="card bg-transparent border-0 text-center">
