styling on images

--- a/html/seasons.html
+++ b/html/seasons.html
@@ -45,7 +45,7 @@
     </nav>
 
     <div class="container" id="season-container">
-        <div class="row">
+        <!-- <div class="row">
             <div class="col-sm-4">
                 <div class="card bg-transparent border-0 text-center">
                     <img src="https://upload.wikimedia.org/wikipedia/en/b/b8/Rick_and_Morty_season_1.png"
@@ -115,7 +115,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
     </div>
 
     <div id="modalDiv"></div>
