--- a/html/seasons.html
+++ b/html/seasons.html
@@ -47,8 +47,9 @@
         </div>
     </nav>
 
-    <div class="container" id="season-container">
-        
+    <div class="container">
+        <div class="grid" id="container-grid"></div>
+
     </div>
 
     <div id="modalDiv"></div>
