back to our old ways

--- a/html/seasons.html
+++ b/html/seasons.html
@@ -47,12 +47,10 @@
         </div>
     </nav>
 
-    <div class="container">
-        <div class="grid" id="container-grid"></div>
+    <div class="container" id="card-container"></div>
 
-    </div>
 
-    <div id="modalDiv"></div>
+    <div id=" modalDiv"></div>
 
 </body>
 
