--- a/html/creators.html
+++ b/html/creators.html
@@ -44,7 +44,7 @@
         <div class="card" style="width: 40rem;">
             <div class="card-body text-center">
                 <h2 class="card-title">The Creators</h2>
-                <div class="row justify-content-center">
+                <div class="row justify-content-center mb-2">
                     <div class="col-sm-4">
                         <img src="https://static.wikia.nocookie.net/gravityfalls/images/2/2f/Justin_Roiland.jpg/revision/latest?cb=20200204214613"
                             class="img-thumbnail" alt="Justin" style="width: 200px; height:250px;">
@@ -56,6 +56,14 @@
                         <p class="card-text">Dan Harmon</p>
                     </div>
                 </div>
+                <p class="text-start" style="text-indent: 2em;">
+                    Rick and Morty is an American adult animated science fiction sitcom created by Justin
+                    Roiland and Dan Harmon for Cartoon Network's nighttime programming block Adult Swim.
+                    The series follows the misadventures of cynical mad scientist Rick Sanchez
+                    and his good-hearted, but fretful grandson Morty Smith,
+                    who split their time between domestic life and interdimensional adventures.
+                    <a href="https://en.wikipedia.org/wiki/Rick_and_Morty" target="_blank">Source</a>
+                </p>
             </div>
         </div>
     </div>
